@@ -11,11 +11,11 @@ fract:
 	[***] Vectorize shaders
 	[***] Include an installation ID in the result fmt (maybe time_t?)
 	[   ] Readd SSE2 and SSE3 implementations of vector3
-	[   ] Try compile with VC 8.0
+	[***] Try compile with VC 8.0
 	[***] Output to temp.txt (FPS & CPU MHz atleast)
-	[   ] Compile a realistic changelog
-	[   ] Fix the loop options
-	[   ] Don't output result file if ESC is pressed
+	[***] Compile a realistic changelog
+	[***] Fix the loop options
+	[***] Don't output result file if ESC is pressed
 
 wxfractgui:
 	[   ] Browse the last result
