@@ -1,18 +1,19 @@
 Differences from 1.06a to 1.07a
 --------------------------------
 
+   *	Loop options were broken in 1.06a, fixed;
 
    *	Added adaptive antialiasing, with several FSAA patterns defined;
 
    *	Added parallel view mode;
 
-   *	Added realistic soft shadows
+   *	Added realistic soft shadows;
 
    *	Shadows are now cast on spheres, too. Meshes also cast shadows 
 	(currently only convex meshes are supported);
 
    *	Better multithreading, shadow rendering is multithreaded, shaders
-	are speeded up;
+	are multithreaded and speeded up;
 
 Differences from 1.05b to 1.06a
 --------------------------------
